--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -167,6 +167,10 @@
         {%- capture link -%}https://facebook.com/{{ site.facebook_id }}{%- endcapture -%}
         {%- assign sameaslinks = sameaslinks | push: link -%}
     {%- endif -%}
+    {%- if site.telegram_id -%}
+    {%- capture link -%}https://t.me/{{ site.telegram_id }}{%- endcapture -%}
+    {%- assign sameaslinks = sameaslinks | push: link -%}
+    {%- endif -%}
     {%- if site.discord_id -%}
         {%- capture link -%}https://discord.com/users/{{ site.discord_id }}{%- endcapture -%}
         {%- assign sameaslinks = sameaslinks | push: link -%}
