--- a/_includes/social.html
+++ b/_includes/social.html
@@ -79,6 +79,9 @@
             {%- if site.facebook_id -%}
             <a href="https://facebook.com/{{ site.facebook_id }}" title="Facebook"><i class="fab fa-facebook"></i></a>
             {% endif %}
+            {%- if site.facebook_id -%}
+            <a href="https://t.me/{{ site.telegram_id }}" title="Telegram"><i class="fab fa-telegram"></i></a>
+            {% endif %}
             {%- if site.discord_id -%}
             <a href="https://discord.com/users/{{ site.discord_id }}" title="Discord"><i class="fab fa-discord"></i></a>
             {% endif %}
