--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,6 @@
-            {%- if site.email -%}
+            <!-- {%- if site.email -%}
             <a href="mailto:{{ site.email | encode_email }}" title="email"><i class="fas fa-envelope"></i></a>
-            {% endif %}
+            {% endif %} -->
             {%- if site.whatsapp_number -%}
             <a href="https://wa.me/{{ site.whatsapp_number }}" title="whatsapp"><i class="fab fa-whatsapp"></i></a>
             {% endif %}
@@ -79,7 +79,7 @@
             {%- if site.facebook_id -%}
             <a href="https://facebook.com/{{ site.facebook_id }}" title="Facebook"><i class="fab fa-facebook"></i></a>
             {% endif %}
-            {%- if site.facebook_id -%}
+            {%- if site.telegram_id -%}
             <a href="https://t.me/{{ site.telegram_id }}" title="Telegram"><i class="fab fa-telegram"></i></a>
             {% endif %}
             {%- if site.discord_id -%}
